# Platform

./: .gitignore  .travis.yml  BATCH_BUILD.sh  BUILD.py  BUILD_ANDROID_ARM.sh  BUILD_ANDROID_ARM64.sh  BUILD_EMSCRIPTEN.sh  BUILD_IOS_ARMv7.sh  BUILD_MBED_LPC1768.sh  BUILD_MICROBIT.sh  BUILD_WEBASM.sh  CMakeLists.txt  Doxyfile  INSTALL_TEMPLATE  Makefile  PDK  README.md  SConstruct  STYLE.md  _config.yml  arcxx.py  build.cmake  build.make  build.scons  config.cmake  doxygen.cfg  objdump.py  tpip  zif.cfg
GUI/: Bitmap.h  CMakeLists.txt  Canvas.h  Colour.h  Font.h  Frame.h  GUI.h  Layout.h  Vector.h  Widget.h
GUI/Bitmap/: BitmapPNG.cpp  BitmapStub.cpp
GUI/Control/: App.h  Bar.h  Button.h  Col.h  Colour.h  Expand.h  Field.h  MenuBar.h  MenuButton.h  PopUpWindow.h  Row.h  ScrollBar.h  Slider.h  Symbol.h  SymbolButton.h  Text.h  TextButton.h  TextTickBox.h  TickBox.h  Widget.h  Window.h
GUI/Font/: FontLED11.cpp  FontLED22.cpp  FontLcd.cpp  FontNew8.cpp  FontTeletext18.cpp  LED.h  Lcd.h  New.h  Teletext.h
GUI/test/: CMakeLists.txt  testGui.cpp  testGuiApp.cpp  testGuiFrame.cpp  testGuiFrameBitmap.cpp  testGuiHelloWorld.cpp
HWR/: CMakeLists.txt  FilePortal.h  README.md  fault_handler.cpp
HWR/Device/: Adc.h  Audio.h  Buttons.h  Dac.h  Display.h  Lcd.h  Led.h  Led7Seg.h  PhysMidi.h  Profiler.h  README.md  Rtc.h  TempSense.h  UsbFile.h  UsbFileMidi.h  YM2151.h
HWR/blinky/: CMakeLists.txt  Config.h  README.md  example.cpp
HWR/picoGame/: CMakeLists.txt  Config.h  example.cpp  test.cpp
HWR/picoSense/: CMakeLists.txt  Config.h  example.cpp  index.md  test.cpp
HWR/picoX21H/: CMakeLists.txt  Config.h  test.cpp
HWR/picoX7/: CMakeLists.txt  Config.h  test.cpp
Hardware/: CMakeLists.txt  FilePortal.h  LICENSE  Makefile  Platform  README.md  index.md
Hardware/Device/: Adc.h  Audio.h  Display.h  Led.h  Led7Seg.h  PhysMidi.h  Rtc.h  UsbFile.h  UsbFileMidi.h
Hardware/blinky/: CMakeLists.txt  Config.h  README.md  example.cpp
Hardware/picoGame/: CMakeLists.txt  Config.h  README.md  example.cpp  test.cpp
Hardware/picoSense/: CMakeLists.txt  Config.h  example.cpp  test.cpp
Hardware/picoX21H/: CMakeLists.txt  Config.h  README.md  test.cpp
Hardware/picoX7/: CMakeLists.txt  Config.h  README.md  test.cpp
MIDI/: CMakeLists.txt  Const.h  Controller.h  Decoder.cpp  Decoder.h  File.h  Instrument.h  Interface.h  MIDI.h  MIDIInterface.h  Map.h  Midi.h  MidiDecoder.cpp  MidiDecoder.h  MidiFile.h
MIDI/Controller/: Akai_MIDImix.cpp  Akai_MIDImix.h  Akai_MPKmini.cpp  Akai_MPKmini.h
MIDI/test/: CMakeLists.txt  testMidiFile.cpp
MTL/: AlphaNumLcd_Gpio.h  AlphaNumLcd_I2C.h  AlphaNumLcd_I2CBridge.h  CMakeLists.txt  CanvasMono1.h  CanvasRGB565.h  ConfigBase.h  Digital.h  EPaperCanvas.h  EPaper_UC8151.h  Frame.h  Lcd.h  Lcd_ST7789V.h  Led7Seg.h  LogReg.h  MTL.h  MTL_PS2KeyDecode.cpp  MTL_clock.cpp  MTL_fault.cpp  MTL_getch.cpp  MTL_halt.cpp  MTL_init.cpp  MTL_load.cpp  MTL_main.cpp  MTL_putch.cpp  Metal.h  Mutex.h  PS2KeyDecode.h  PS2Keyboard.h  Periph.h  README.md  Register.h  TempSens_MCP9808.h  USBMassStorageDevice.h  USBMassStorageInterface.h  USBMidiDevice.h  USBMidiInterface.h  UsbAudioControl.h  UsbMIDI.h  UsbTypes.h  (+3 more)
MTL/ATtiny84/: ATtiny  CMakeLists.txt  Config.h  MTL_init.cpp  Pins.h
MTL/ATtiny85/: ATtiny85  CMakeLists.txt  Config.h  Gpio.h  MTL_clock.cpp  Pins.h
MTL/LPC1114/: CMakeLists.txt  Config.h  Gpio.h  IoCon.h  LPC1114  MTL_init.cpp  Pins.h  USART.h  script.ld  vector_table.s
MTL/LPC11U24/: CMakeLists.txt  IoCon.h  MTL_alert.cpp  MTL_console.cpp  MTL_halt.cpp  MTL_init.cpp  Pins.h  RAM.h  SysCon.h  USART.h
MTL/LPC1768/: CMakeLists.txt  Config.h  DAC.h  DACPump.h  GPDMA.h  GPIO.h  I2S.h  Keyboard.h  MTL_alert.cpp  MTL_console.cpp  MTL_halt.cpp  PALVideo.h  PWM.h  PinCon.h  PixelGen.h  RAM.h  SSP.h
MTL/LPC810/: LPC810  (+13 more)
PLT/: Audio.h  Bitmap.h  CMakeLists.txt  Event.h  File.h  Frame.h  Image.h  Info.h  KeyCode.h  MIDIInterface.h  Midi.h  Rtc.h  Socket.h  Sounder.h  Yield.h
SIG/: CMakeLists.txt  Const.h  Conv.h  Delay.h  DelayN.h  DelayV.h  ExpSlew.h  Gain.h  LinSlew.h  LogPot.h  SIG.h  Table_amp15.py  Table_atten15.py  Table_clip_tanh.py  Table_delta14_7.py  Table_gain.py  Table_note.py  Types.h
STB/: Angle.h  ArCxx.h  BitArray.h  BitfieldRef.h  CMakeLists.txt  CSV.h  Colour.h  Complex.h  ConsoleApp.h  Deflate.cpp  Deflate.h  Endian.h  FAT16.h  Fifo.h  FileSystem.h  FixP.h  Heap.h  Http.h  IFF.h  JSON.h  Keypad.h  Lex.h  License.h  List.h  MIDIChannel.h  MIDIInstrument.h  MIDIInstrumentBase.h  MIDIInterface.h  MIDIconst.h  Matrix_3x3.h  Matrix_4x4.h  Midi.h  MidiDecoder.cpp  MidiDecoder.h  MidiFile.h  Net.h  Oil.cpp  Oil.h  Option.cpp  Option.h  (+17 more)
TGT/: CMakeLists.txt  README.md  TGT_load.cpp  TGT_loader.cpp  delete.cpp  empty.cpp  gcc_global_obj.cpp  gcc_guard.cpp  gcc_pure_virtual.cpp
TNY/: CMakeLists.txt  README.md  abort.cpp  abs.cpp  atof.cpp  atoi.cpp  atol.cpp  atoll.cpp  clock.cpp  cos.c  cosf.c  delete.cpp  exit.cpp  expf.cpp  feof.cpp  fgetc.cpp  fprintf.cpp  fputc.cpp  fstreams.cpp  gcc_pure_virtual.cpp  getchar.cpp  global_obj.cpp  guard.c  isalpha.cpp  isdigit.cpp  isspace.cpp  malloc.cpp  memcpy.cpp  memmove.cpp  memset.cpp  pow.c  powf.c  powf.cpp  printf.cpp  pure_virtual.cpp  putchar.cpp  puts.cpp  rand.cpp  scanf.cpp  signal.cpp  (+29 more)
TRM/: Ansi.h  AnsiImpl.h  App.h  CMakeLists.txt  Console.h  ConsoleDevice.h  Curses.h  Device.h  Frame.h  FrameDevice.h  Launcher.h
UCL/: CMakeLists.txt  PrintF.cpp  README.md  abs.cpp  atof.cpp  cctype  cinttypes  cstdint  cstring  ctype.h  isalnum.cpp  isalpha.cpp  isdigit.cpp  isgraph.cpp  islower.cpp  isspace.cpp  isupper.cpp  isxdigit.cpp  memcpy.cpp  memmove.cpp  memset.cpp  rand.cpp  snprintf.cpp  sprintf.cpp  sprintf.h  stdint.h  strcat.cpp  strchr.cpp  strcmp.cpp  strcpy.cpp  string.h  strlen.cpp  strncmp.cpp  strncpy.cpp  strrchr.cpp  strto_template.h  strtod.cpp  strtoll.cpp  strtoul.cpp  type_traits  (+3 more)
USB/: CMakeLists.txt  Descr.h  Device.h  EndPoint.h  Interface.h  Request.h  SCSI.h  USB.h
template/: .gitignore  .travis.yml  BUILD  BUILD.sh  CMakeLists.txt  Doxyfile  LICENSE  README.md  SConstruct
(+1462 files in other folders)
